Archive2/61/561a9ef314b0c6/output
main.cpp: In function 'int main()':
main.cpp:3:6: error: 'tm' was not declared in this scope
     &tm;
      ^
